--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8">
-  <title>Jub</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Jubari Travel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="https://jubari.net/media/602/logo-color.svg" type="image/svg+xml">
 </head>
 <body>
   <app-root></app-root>
