--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Jubari Travel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://yt3.googleusercontent.com/75ELAI1mLWXx_YBEhlhS5acbXuFk2WgRNaaczG2leF1Meexp3_2JAK9Qe_PawZgGEZkHb9NzrV4=s160-c-k-c0x00ffffff-no-rj" type="image/svg+xml">
+  <link rel="icon" href="https://jubari.net/media/602/logo-color.svg" type="image/svg+xml">
 </head>
 <body>
   <app-root></app-root>
