--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Jubari Travel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://jubari.net/media/602/logo-color.svg" type="image/svg+xml">
+  <link rel="icon" href="https://jubari.net/media/604/icon-logo.svg" type="image/svg+xml">
 </head>
 <body>
   <app-root></app-root>
